Some YouTube videos flickering in Nightly after March 12th build
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox73 | --- | unaffected |
| firefox74 | --- | unaffected |
| firefox75 | --- | unaffected |
| firefox76 | + | verified |
People
(Reporter: wvyar.comms, Assigned: sotaro)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:76.0) Gecko/20100101 Firefox/76.0
Steps to reproduce:
Using Firefox Nightly, play certain videos in YouTube (one example: https://www.youtube.com/watch?v=BPCjC543llU ). This bug does not occur for all videos (for example, https://www.youtube.com/watch?v=FjIbuwNDpDo plays normally). This bug occurs even on a fresh profile in safe mode.
Actual results:
The video to rapidly repeats a small number of frames for the duration of the video. The specific frames flickering seems to depend on where in the video playback is started (e.g. starting later in the video causes frames from later in the video to repeat). This issue seems to have started with the first March 12th build and occurs on Windows 7, 10, and Ubuntu.
Expected results:
The video should play normally.
Comment 1•6 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Comment 2•6 years ago
|
||
[Tracking Requested - why for this release]: some video playback glitch
Regression window;
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b9bf352a94d2d41df26dae4a672daadb5185fdce&tochange=71df0e854e4f728d2eade9260fb2ecf44e5ab3d5
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 4•6 years ago
|
||
It seems that I saw the problem only when WebRender is disabled and compositor is used for rendering.
Alice0775 White, can you reproduce the problem with WebRender?
| Assignee | ||
Comment 5•6 years ago
|
||
Updated•6 years ago
|
Comment 6•6 years ago
•
|
||
[REPRODUCED, flickering and looping video image]
Basic(i.e. HWA off) and Direct3D11(Advanced Layers) on Windows10
OpenGL(layers.acceleration.force-enabled= true) on Ubuntu18.04 of VMWare guest.
[NOT REPRODUCED]
WebRender enabled on Windows10.
[REPRODUCED Maybe not related to this bug, sometimes flickering, but not looping video image]
Basic(i.e. HWA off) on Ubuntu18.04 of VMWare guest.
[NOT TESTED]
- on MAC OS
WebRender on Ubuntu18.04 of VMWare guest.
| Assignee | ||
Comment 7•6 years ago
|
||
Thank you for the checking!
Comment 10•6 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 11•6 years ago
|
||
The recycle allocator usage is going to be re-enabled by Bug 1622709 by addressing the problem.
Updated•6 years ago
|
Updated•5 years ago
|
Comment 12•5 years ago
|
||
Description
•