Bug 1622142 - Disable recycle allocator usage for av1 video for now r=nical

When WebRender is not used, recycle allocator usage for av1 video  causes rendering problem.

Differential Revision: https://phabricator.services.mozilla.com/D66731